Revision history for {{$dist->name}}

{{$NEXT}}
 - ::OrderByMagic now correctly passes through arrayrefs (moltar)

2.018002  2013-07-30 18:45:10 CST6CDT
 - ::Helper::ResultSet correctly uses all Helpers (reported by moltar)
   Note that some deprecated helpers were removed from ::ResultSet, so check
   your code to see if you use the as_virtual_view method.  If you do, replace
   it with as_subselect_rs and you'll be fine.
 - Fix return precedence in test (Reini Urban)

2.018001  2013-07-02 20:40:18 CST6CDT
 - Fix bug related to inheriting from ::Shortcut

2.018000  2013-06-22 17:03:29 CST6CDT
 - Add ::ResultSet::Shortcut::OrderByMagic (moltar)
 - Add ::ResultSet::Shortcut::Prefetch (Wallas Reis)
 - Add ::ResultSet::Shortcut::HasRows (Wallas Reis)
 - Add ::ResultSet::Shortcut::Limit (Wallas Reis)
 - make ::ResultSet::Me more flexible (moltar)
 - Fix some warnings (when using deprecated modules) (good catch Bill
   Mosely)
 - Fix lots of docs (moltar, Gregor Herrmann, mauke)

2.017000  2013-04-20 10:37:04 CST6CDT
 - Add ::Schema::QuoteNames to force quote_names on
 - Add normalize_connect_info utilitiy

2.016006  2013-04-12 09:14:23 CST6CDT
 - Remove use of a private method, thus fixing Helpers on v0.08210
 - Remove the last vestige of non-in-memory SQLite
 - Stop using RT for bugtracking

2.016005  2013-01-23 19:00:09 CST6CDT
 - Fix hash order dependency bug (Thanks Fitz Elliott!)

2.016004  2013-01-09 20:05:57 CST6CDT
 - Add more storages for ::ResultSet::Random (Thanks José Diaz Seng!)

2.016003  2012-12-07 15:54:29 CST6CDT
 - Fix bug in dup_check_source_auto and fk_check_source_auto.  If
   any of the broken things were multiple they explode in the hashref.
   The solution is to force the values to be resultsets, which is how
   the helper is documented anyway. (thanks MST for finding this)

2.016002  2012-11-17 15:31:12 CST6CDT
 - Put MetaYAML back in dist

2.016001  2012-11-02 17:52:43 CST6CDT
 - fix OnColumnChange to work with relationship based updates