@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
  - ::OrderByMagic now correctly passes through arrayrefs (moltar)
+ - ::OrderByMagic only prefixes with CSA when needed (moltar)
 
 2.018002  2013-07-30 18:45:10 CST6CDT
  - ::Helper::ResultSet correctly uses all Helpers (reported by moltar)
